# robotics-project

./: .gitignore  How to run app.txt  README.md  app.py  handle_models.py
choregraphe/: main.pml  manifest.xml
choregraphe/Main/: Main.pml  manifest.xml
choregraphe/Main/behavior_1/: behavior.xar
choregraphe/behavior_1/: behavior.xar
client/: README.md
client/NAOH25/: KMat.hpp  KinematicsDefines.h  robotConsts.h
client/src/: humanSkeleton.cpp  humanSkeleton.h  imitator.h  kinect.cpp  kinect.h  main.cpp  qiproject.xml
models/: human-pose-estimation-3d.mapping  human-pose-estimation-3d.xml
outputs/: Structure.ipynb
outputs/T_pose/: T_pose_2d  T_pose_3d
outputs/model2/: model2_2d  model2_3d
outputs/open_arms/: open_arms_2d  open_arms_3d
outputs/stretching/: stretching_2d  stretching_3d
outputs/stretching_2/: stretching_2_3d
outputs/yoga2/: rawOutput  yoga2_3d
robin/: README.md
robin/NAOH25/: NAOKinematics.cpp  NAOKinematics.h  New Text Document.txt
robin/src/: CMakeLists.txt  FindKinectSDK2.cmake  a.out  evaluate.cpp  evaluate.h  humanSkeleton.cpp  humanSkeleton.h  imitator.cpp  imitator.h  kinect.cpp  kinect.h  main.cpp  nao.cpp  nao.h
robin/src/.qi/: path.conf  qibuild.xml
robin/src/src_new/: balancer.cpp  balancer.h  evaluate.cpp  evaluate.h  humanSkeleton.cpp  imitator.cpp  imitator.h  nao.cpp  nao.h
server/modules/: draw.py  input_reader.py  parse_poses.py
server/outputs/: Structure.ipynb
server/outputs/.ipynb_checkpoints/: Structure-checkpoint.ipynb
server/outputs/T_pose/: rawOutput
server/outputs/model2/: rawOutput
server/outputs/open_arms/: rawOutput
server/outputs/stretching/: rawOutput
server/outputs/stretching_2/: rawOutput  stretching_2_2d  stretching_2_3d
server/outputs/yoga2/: yoga2_2d
simulation/controllers/nao_demo/: nao_demo_python.py
simulation/worlds/: .nao_demo.wbproj
src/: app.py  motion.py
